# TermTask

./: Cargo.toml  README.md
src/: cli.rs  git.rs  main.rs  prompt.rs
src/models/: config.rs  mod.rs  todo.rs
src/storage/: config_store.rs  json_store.rs  mod.rs
src/ui/: app.rs  events.rs  mod.rs  themes.rs
src/ui/app/: events.rs  mod.rs  render.rs  state.rs
src/ui/components/: add_todo_modal.rs  confirmation.rs  help_modal.rs  mod.rs  settings.rs  toast.rs  todo_list.rs  unified_modal.rs  vim_indicator.rs
src/ui/components/input/: mod.rs  normal.rs  vim.rs
src/ui/components/modals/: add_todo_modal.rs  confirmation.rs  help_modal.rs  mod.rs  multi_select.rs  preview_modal.rs  settings.rs
src/ui/styling/: mod.rs  themes.rs  vim_indicator.rs
